+ <video> in index.html
Added video to the main page.

--- a/plik_perzynski.html
+++ b/plik_perzynski.html
@@ -14,7 +14,8 @@
 		<h1>pobierz .zip</h1>
 		<a href="test.zip" download>pobierz tutaj</a>
 		<br>
-		
+		<a href='http://www.counterliczniki.com'>http://www.Counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=e8a46263cc381569e57a22ec40b5ff7b123829ac'></script>
+		<script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1103028/t/8"></script>
 		<a href="index.html">powrót </a>
 	</body>
 </html>
