--- a/tabelka_perzynski.html
+++ b/tabelka_perzynski.html
@@ -113,5 +113,7 @@
         </table>
         <p style="font-size: 6px; color: red;"><u><i>Źródło: własne</i></u></p><br>
 		<a href="index.html">powrót</a>
+        <a href='http://www.counterliczniki.com'>http://www.Counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=e8a46263cc381569e57a22ec40b5ff7b123829ac'></script>
+        <script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1103028/t/8"></script>
 	</body>
 </html>
