--- a/z1_z6_perzynski.html
+++ b/z1_z6_perzynski.html
@@ -239,6 +239,8 @@
 		<a href="#srodek">środek tekstu</a><br>
 		<a href="tabelka_perzynski.html">tabela</a><br>
 		<a href="formularz_perzynski.html">formularz</a><br>
+		<a href='http://www.counterliczniki.com'>http://www.Counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=e8a46263cc381569e57a22ec40b5ff7b123829ac'></script>
+		<script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1103028/t/8"></script>
 		<!--
 			autor: Oliwier Perzyński
 			szkola: zse (gdansk) klasa 1p
