--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table width=95% border="1">
             <tr  width="100%">
                 <td colspan="3">
-                    <iframe width="100%" src="logo_iframe.html" noscrolling></iframe>
+                    <iframe width="100%" src="logo_iframe.html" scrolling="no"></iframe>
                 </td>
             </tr>
             <tr>
@@ -46,6 +46,13 @@
             <tr width="100%">
                 <td colspan="3">
                     <iframe width="100%" src="stopka_iframe.html"></iframe>
+                    <a href='http://www.counterliczniki.com'>http://www.Counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=e8a46263cc381569e57a22ec40b5ff7b123829ac'></script>
+                    <script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1103028/t/8"></script>
+                    <video width="320" height="240" controls>
+                        <source src="./20231116_155630.mp4" type="video/mp4">
+                        <source src="movie.ogg" type="video/ogg">
+                        brak supportu :(
+                    </video>
                 </td>
             </tr>
         </table>
