--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                         <source src="movie.ogg" type="video/ogg">
                         brak supportu :(
                     </video>
+                    <a href='http://www.counterliczniki.com'>darmowy liczniki</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=1b0f20f9827ed11c2e2b51d72c398520483cd9a3'></script>
+                    <script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/1106451/t/0"></script>
                 </td>
             </tr>
         </table>
