--- a/tabelka.html
+++ b/tabelka.html
@@ -35,7 +35,7 @@
                         </li>
                     </ul>
                 </td>   
-                <td align="center"><iframe width=100% height=750 name="strony" src="getFrom.html" border="0"></iframe></td>
+                <td align="center"><iframe width=100% height=750 name="strony" src="tabelka_perzynski.html" border="0"></iframe></td>
                 <td width="18%">
                     <center>
                         <map id="mapa_perzynski">
